--- a/dashboard.html
+++ b/dashboard.html
@@ -43,47 +43,35 @@
         </div>
 
         <div class="menu-grid">
-            
-            <a href="kuis-daftar.html" class="menu-item blue">
-                <div class="icon-box">
-                    <i class="fa-solid fa-pencil"></i>
-                </div>
-                <div class="text-box">
-                    <h3>Daftar Kuis</h3>
-                    <p>Kerjakan tugas & ujian baru</p>
-                </div>
-                <div class="arrow-box">
-                    <i class="fa-solid fa-chevron-right"></i>
-                </div>
-            </a>
-
-            <div class="menu-item purple" onclick="alert('Segera Hadir!')">
-                <div class="icon-box">
-                    <i class="fa-solid fa-clock-rotate-left"></i>
-                </div>
-                <div class="text-box">
-                    <h3>Riwayat Nilai</h3>
-                    <p>Lihat hasil belajarmu</p>
-                </div>
-                <div class="arrow-box">
-                    <i class="fa-solid fa-lock"></i>
-                </div>
-            </div>
-
-             <div class="menu-item orange" onclick="alert('Segera Hadir!')">
-                <div class="icon-box">
-                    <i class="fa-solid fa-id-card"></i>
-                </div>
-                <div class="text-box">
-                    <h3>Profil Saya</h3>
-                    <p>Pengaturan akun</p>
-                </div>
-                <div class="arrow-box">
-                    <i class="fa-solid fa-lock"></i>
-                </div>
-            </div>
-
+    
+    <a href="kuis-daftar.html" class="menu-item blue">
+        <div class="icon-box"><i class="fa-solid fa-pen-nib"></i></div>
+        <div class="text-box">
+            <h3>Daftar Kuis</h3>
+            <p>Kerjakan tugas & ujian baru</p>
         </div>
+        <div class="arrow-box"><i class="fa-solid fa-chevron-right"></i></div>
+    </a>
+
+    <a href="riwayat.html" class="menu-item orange">
+        <div class="icon-box"><i class="fa-solid fa-clock-rotate-left"></i></div>
+        <div class="text-box">
+            <h3>Riwayat Nilai</h3>
+            <p>Lihat hasil belajar & evaluasi</p>
+        </div>
+        <div class="arrow-box"><i class="fa-solid fa-chevron-right"></i></div>
+    </a>
+
+    <a href="profil.html" class="menu-item teal">
+        <div class="icon-box"><i class="fa-solid fa-user-gear"></i></div>
+        <div class="text-box">
+            <h3>Profil Saya</h3>
+            <p>Pengaturan akun & data diri</p>
+        </div>
+        <div class="arrow-box"><i class="fa-solid fa-chevron-right"></i></div>
+    </a>
+
+</div>
 
     </main>
 
