--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -81,17 +81,14 @@
                 </div>
             </a>
 
-            <div class="menu-item card-admin-users" onclick="alert('Fitur Rekap Nilai Siswa akan segera hadir!')">
-                <div class="icon-box">
-                    <i class="fa-solid fa-users-viewfinder"></i>
-                </div>
-                <div class="text-box">
-                    <h3>Data Siswa & Nilai</h3>
-                    <p>Pantau perkembangan hasil belajar.</p>
-                </div>
-                <div class="arrow-box">
-                    <i class="fa-solid fa-lock"></i>
-                </div>
+            <a href="users-list.html" class="menu-item card-admin-users">
+    <div class="icon-box"><i class="fa-solid fa-users-viewfinder"></i></div>
+    <div class="text-box">
+        <h3>Data Siswa & Nilai</h3>
+        <p>Arsip lengkap profil dan nilai ujian siswa.</p>
+    </div>
+    <div class="arrow-box"><i class="fa-solid fa-chevron-right"></i></div>
+</a>
             </div>
 
         </div>
