--- a/kuis-pre.html
+++ b/kuis-pre.html
@@ -12,40 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
+    <link rel="stylesheet" href="css/style.css">
+
     <style>
-        :root {
-            --primary: #005a9c;
-            --secondary: #004070;
-            --accent: #f7a04a;
-            --bg-body: #f4f7f6;
-            --text-main: #333;
-            --success: #28a745;
-        }
-
+        /* Kita timpa sedikit agar sesuai desain halaman Pre-Kuis */
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--bg-body);
-            margin: 0; padding: 0;
-            color: var(--text-main);
+            background-color: #f4f7f6; /* Pastikan background sama */
         }
-
-        /* NAVBAR */
-        .navbar {
-            background: white; padding: 15px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            position: sticky; top: 0; z-index: 100;
-        }
-        .container { width: 90%; max-width: 1000px; margin: 0 auto; }
-        .nav-content { display: flex; justify-content: space-between; align-items: center; }
-        .nav-brand { display: flex; align-items: center; gap: 10px; }
-        .nav-logo { width: 40px; height: auto; }
-        .brand-text { font-weight: 700; color: var(--primary); font-size: 1.2em; }
-        
-        .btn-back {
-            text-decoration: none; color: #555; font-weight: 500;
-            display: flex; align-items: center; gap: 5px; transition: 0.3s;
-        }
-        .btn-back:hover { color: var(--primary); }
 
         /* KARTU PRE-KUIS */
         .lobby-container {
@@ -54,6 +27,8 @@
             box-shadow: 0 10px 40px rgba(0,0,0,0.08);
             overflow: hidden;
             animation: slideUp 0.5s ease;
+            position: relative; /* Agar tidak tertutup elemen lain */
+            z-index: 1; 
         }
 
         /* Header Kartu (Gradient) */
@@ -96,7 +71,7 @@
         /* Tombol Mulai */
         .btn-start-exam {
             display: block; width: 100%;
-            background: var(--success); color: white;
+            background: #28a745; color: white;
             padding: 15px; border: none; border-radius: 12px;
             font-size: 1.1em; font-weight: 700; cursor: pointer;
             transition: 0.3s; box-shadow: 0 5px 15px rgba(40, 167, 69, 0.3);
@@ -105,9 +80,9 @@
         .btn-start-exam:hover { background: #218838; transform: translateY(-2px); }
         .btn-start-exam.disabled { background: #ccc; cursor: not-allowed; transform: none; box-shadow: none; }
 
-        /* Loading & Error */
-        .loading-view, .error-view { text-align: center; padding: 50px; }
-        .spinner {
+        /* Loading & Error View Khusus Halaman Ini */
+        .page-loading-view, .page-error-view { text-align: center; padding: 50px; }
+        .page-spinner {
             width: 40px; height: 40px; border: 4px solid #f3f3f3;
             border-top: 4px solid var(--primary); border-radius: 50%;
             animation: spin 1s linear infinite; margin: 0 auto 15px auto;
@@ -126,29 +101,29 @@
 <body>
 
     <nav class="navbar">
-        <div class="container nav-content">
+        <div class="container nav-container">
             <div class="nav-brand">
                 <img src="https://imgur.com/5Srjyo4.png" alt="Logo" class="nav-logo">
-                <span class="brand-text">Cendekia Aksara</span>
+                <span class="brand-name">Cendekia Aksara</span>
             </div>
-            <a href="kuis-daftar.html" class="btn-back">
+            <a href="kuis-daftar.html" class="btn-logout" style="color: #555; border-color: transparent;">
                 <i class="fa-solid fa-arrow-left"></i> Batal
             </a>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container dashboard-content">
         
-        <div id="loading-view" class="loading-view">
-            <div class="spinner"></div>
+        <div id="loading-view" class="page-loading-view">
+            <div class="page-spinner"></div>
             <p>Menyiapkan ruang ujian...</p>
         </div>
 
-        <div id="error-view" class="error-view" style="display: none;">
+        <div id="error-view" class="page-error-view" style="display: none;">
             <i class="fa-solid fa-triangle-exclamation" style="font-size: 3em; color: #dc3545; margin-bottom: 20px;"></i>
             <h3>Kuis Tidak Ditemukan</h3>
             <p style="color: #666;">Data soal tidak valid atau telah dihapus.</p>
-            <a href="kuis-daftar.html" class="btn-back" style="justify-content: center; margin-top: 20px; color: var(--primary);">
+            <a href="kuis-daftar.html" class="btn btn-secondary" style="margin-top: 20px;">
                 Kembali ke Daftar Kuis
             </a>
         </div>
