--- a/kuis-result.html
+++ b/kuis-result.html
@@ -18,11 +18,23 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-        body { background-color: #f0f2f5; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 20px; font-family: 'Poppins', sans-serif; }
+        body { 
+    background-color: #f0f2f5; 
+    min-height: 100vh; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    padding: 20px; 
+    font-family: 'Poppins', sans-serif; 
+    margin: 0; /* Menambahkan ini untuk menghilangkan margin default browser */
+}
 
-        .result-container {
-            width: 100%; max-width: 500px;
-            text-align: center;
+.result-container {
+    width: 100%; 
+    max-width: 500px;
+    text-align: center;
+    position: relative; /* Menambahkan ini untuk memastikan posisi relatif */
+}
         }
 
         /* --- KARTU HASIL --- */
