--- a/kuis-result.html
+++ b/kuis-result.html
@@ -19,22 +19,19 @@
 
     <style>
         body { 
-    background-color: #f0f2f5; 
-    min-height: 100vh; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    padding: 20px; 
-    font-family: 'Poppins', sans-serif; 
-    margin: 0; /* Menambahkan ini untuk menghilangkan margin default browser */
-}
+            background-color: #f0f2f5; 
+            min-height: 100vh; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            padding: 20px; 
+            font-family: 'Poppins', sans-serif; 
+            margin: 0; 
+        }
 
-.result-container {
-    width: 100%; 
-    max-width: 500px;
-    text-align: center;
-    position: relative; /* Menambahkan ini untuk memastikan posisi relatif */
-}
+        .result-container {
+            width: 100%; max-width: 500px;
+            text-align: center;
         }
 
         /* --- KARTU HASIL --- */
